80% done of the menu finalized some details and about and contact page are done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "Choco",
+        "Chocoba",
         "Kimo's",
-        "Kimo’s"
+        "Kimo’s",
+        "Makanek",
+        "Nutella",
+        "Soujouk"
     ]
 }
