97% of menu is finalized platter category is left

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
     "cSpell.words": [
+        "Ahwe",
+        "Almaza",
+        "Arguile",
         "Choco",
         "Chocoba",
+        "fenjen",
         "Kimo's",
         "Kimo’s",
         "Makanek",
         "Nutella",
+        "rass",
         "Soujouk"
     ]
 }
